name:              leport-web
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app, fay-shared
    other-modules:   Lens
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Macros
                     Settings
                     Settings.StaticFiles
                     SharedTypes
                     Handler.Common
                     Handler.Home
                     Handler.Admin
                     Handler.Fay
                     Handler.Settings
                     Handler.Report
                     Handler.Register
                     LXC
                     Merger
                     Types

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: MonadRandom >= 0.3.0.2
                 , QuickCheck >= 2.7.6
                 , aeson                         >= 0.6        && < 0.9
                 , base                          >= 4          && < 5
                 , bytestring                    >= 0.9        && < 0.11
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , classy-prelude-yesod >= 0.11.1
                 , conduit                       >= 1.0        && < 2.0
                 , containers
                 , data-default
                 , directory                     >= 1.1        && < 1.3
                 , exceptions >= 0.8.0.2
                 , fast-logger                   >= 2.2        && < 2.4
                 , fay >= 0.23.1.6
                 , fay-jquery >= 0.6.0.3
                 , fay-ref >= 0.1.0.0
                 , fay-text >= 0.3.2.2
                 , file-embed
                 , ghc >= 7.8.3
                 , ghc-mtl >= 1.2.1.0
                 , haskell-src-exts >= 1.16.0.1
                 , haskell-src-exts-qq >= 0.6.1
                 , hint >= 0.4.2.3
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 2.1        && < 2.2
                 , lens >= 4.7.0.1
                 , monad-control                 >= 0.3        && < 1.1
                 , monad-logger                  >= 0.3        && < 0.4
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-sqlite             >= 2.1.1      && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , pure-io >= 0.2.1
                 , pwstore-fast >= 2.4.4
                 , safe
                 , shakespeare                   >= 2.0        && < 2.1
                 , syb >= 0.4.4
                 , template-haskell
                 , temporary >= 1.2.0.3
                 , text                          >= 0.11       && < 2.0
                 , time
                 , unordered-containers
                 , vector
                 , wai-extra                     >= 3.0        && < 3.1
                 , wai-logger                    >= 2.2        && < 2.3
                 , warp                          >= 3.0        && < 3.1
                 , websockets >= 0.9.5.0
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-auth-hashdb >= 1.4.2.2
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-fay >= 0.7.1
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , yesod-markdown >= 0.9.4
                 , yesod-static                  >= 1.4.0.3    && < 1.5
                 , yesod-websockets >= 0.2.1.1
                 , zip-archive >= 0.2.3.7
    if os(linux)
       build-depends: lxc
    else
       other-modules:   LXC.Compat

executable         leport-web
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , classy-prelude-yesod >= 0.11.1
                     , lens >= 4.7.0.1
                     , leport-web
                     , persistent >= 2.1.6
                     , pwstore-fast >= 2.4.4

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N


executable         registerer
    hs-source-dirs: app
    if flag(library-only)
        Buildable: False

    main-is:           registerer.hs
    hs-source-dirs:    test
    build-depends:     base
                     , leport-web
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , pwstore-fast >= 2.4.4
                     , text
                     , yesod-auth-hashdb
                     , yesod-markdown >= 0.9.4

executable         leport-worker
    hs-source-dirs: app, .
    if flag(library-only)
        Buildable: False

    main-is:           leport-worker.hs
    hs-source-dirs:    test
    if os(linux)
       build-depends: lxc
    else
       other-modules:   LXC.Compat
    build-depends:     base
                     , hint
                     , yaml
                     , haskell-src-exts
                     , distributed-process
